tests/fsharp/typecheck/sigs/neg123.bsl

neg123.fs(19,18,19,27): typecheck error FS0003: This value is not a function and cannot be applied.
